--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body id="indexBody">
 <video autoplay muted loop id="homeVideo">
-    <source src="/media/homevideo.mp4" type="video/mp4">
+    <source src="homevideo.mp4" type="video/mp4">
 </video>
 
 <div id="homeLog">  
